# SportsDisplay

./: .gitignore  CMakeLists.txt  CMakePresets.json
ESPN API/: Nascar.txt
ESPN API/Examples/: news.json  scoreboard.json  specific_team.json  teams.json
SportsDisplay/: CMakeLists.txt
SportsDisplay/include/: DataProcess.h  Event.h  ImageProcessing.h  NewsItem.h  Scheduler.h  Serial.h  SportsDisplay.h  Team.h
SportsDisplay/lib/: datetime.lib
SportsDisplay/python/: ConvertImages.py
SportsDisplay/src/: DataProcess.cpp  Event.cpp  ImageProcessing.cpp  NewsItem.cpp  Scheduler.cpp  Serial.cpp  SportsDisplay.cpp  Team.cpp
SportsDisplay/src/Datetime/: datetime.cpp  timespan.cpp
